<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loading_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/loading"
        style="?android:attr/textAppearanceLarge"
        android:background="#FFFFFFFF"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:animateLayoutChanges="true"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_textView_planetName"
                android:text="@string/planet_name"
                style="@style/PlanetDetailsTextViewStyle">
            </TextView>

            <EditText
                android:id="@+id/details_editText_planetName"
                android:inputType="textCapSentences|text"
                style="@style/PlanetDetailsEditTextStyle">
            </EditText>

            <TextView
                android:id="@+id/details_textView_diameter"
                android:text="@string/diameter"
                style="@style/PlanetDetailsTextViewStyle">
            </TextView>

            <EditText
                android:id="@+id/details_editText_diameter"
                android:inputType="number"
                style="@style/PlanetDetailsEditTextStyle">
            </EditText>

            <TextView
                android:id="@+id/details_textView_distance"
                android:text="@string/distance"
                style="@style/PlanetDetailsTextViewStyle">
            </TextView>

            <EditText
                android:id="@+id/details_editText_distance"
                android:inputType="number"
                style="@style/PlanetDetailsEditTextStyle">
            </EditText>

            <TextView
                android:id="@+id/details_textView_atmosphere"
                android:text="@string/atmosphere"
                style="@style/PlanetDetailsTextViewStyle">
            </TextView>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/details_checkBox_atmosphere">
            </CheckBox>

            <TextView
                android:id="@+id/details_textView_discoverer"
                android:text="@string/discoverer"
                style="@style/PlanetDetailsTextViewStyle">
            </TextView>

            <EditText
                android:id="@+id/details_editText_discoverer"
                android:inputType="textCapSentences|text"
                style="@style/PlanetDetailsEditTextStyle">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/marginTop_buttons"
                android:gravity="center_horizontal">
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/details_button_ok"
                    android:textSize="@dimen/text_size_xlarge">
                </Button>

                <Button
                    style="@style/ButtonStyle"
                    android:layout_marginLeft="@dimen/margin_between_buttons"
                    android:layout_marginStart="@dimen/margin_between_buttons"
                    android:id="@+id/details_button_cancel"
                    android:text="@string/cancel"
                    android:textSize="@dimen/text_size_xlarge">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

